# variants-linkage

./: .pre-commit-config.yaml  Cargo.toml  README.md  TODO
examples/: test.sh
src/: lib.rs  link.rs  main.rs  validate.rs  variant.rs
tests/: merge.1:144854597-144854608.bam  merge.1:144854597-144854608.bam.bai  test.1:144852532-144852632.bam  test.1:144852532-144852632.bam.bai  test.vcf  test_record_validate.rs  triple-snp.1:144854047-144854049.bam  triple-snp.1:144854047-144854049.bam.bai  triple-snp.1:144854047-144854049.sam
